<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#111111">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/configureIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_ip_adress"
            android:paddingHorizontal="32dp"
            android:background="#666666"
            android:textColor="#bbbbbb"
            />

        <Button
            android:id="@+id/pepperMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="3dp"
            android:text="@string/listen"
            android:elevation="20dp"
            android:background="#666666"
            android:textColor="#bbbbbb"
            />
        <ImageView
            android:id="@+id/debugState"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="#222222">

        </ImageView>
        <ImageView
            android:id="@+id/focusState"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="#222222">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/firstLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/ipTextInputField"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_margin="24dp"
            android:background="#333333"
            android:text="@string/_192_168_0_139"
            android:textColor="#999999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/portTextInputField"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_margin="24dp"
            android:background="#333333"
            android:text="@string/_5000"
            android:textColor="#999999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ipSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="#666666"
            android:elevation="20dp"
            android:paddingHorizontal="32dp"
            android:text="@string/submit"
            android:textColor="#bbbbbb" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentIpTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_url"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/currentIpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ip_set"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/currentPortText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_port_set"
                android:textColor="#999999" />

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/debugTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textColor="#999999"
        app:layout_constraintTop_toBottomOf="@id/secondLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>